--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,6 +164,13 @@ button:hover {
     text-align: center;
 }
 
+.titulo-pagina-2 {
+    padding: 70px 0px 10px 0px;
+    margin-bottom: 10px;
+    background-color: #2a9ee2;
+    text-align: center;
+}
+
 .informacao-pagina {
     text-align: center;
     margin-top: 30px;
@@ -197,4 +204,19 @@ span {
 
 .redes-sociais img {
     margin: 0px 15px 0px 15px;
+}
+
+
+.pagination li{
+    display: inline;
+    margin:0 5px;
+}
+
+.pagination ul {
+    list-style-type: none;
+}
+
+span .relative{
+    width: 5px;
+    height: 5px;
 }
