--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,16 +207,7 @@ span {
 }
 
 
-.pagination li{
+/* .navigation {
     display: inline;
-    margin:0 5px;
 }
-
-.pagination ul {
-    list-style-type: none;
-}
-
-span .relative{
-    width: 5px;
-    height: 5px;
-}
+ */
